package edu.hitsz.aircraft;

public interface CanBeBlownUp {
    void beblownup() ;
}
