@startuml AircraftWar_ClassDiagram

!theme plain
skinparam classAttributeIconSize 0
skinparam classFontStyle bold

package "basic" {
    abstract class AbstractFlyingObject {
        # int locationX
        # int locationY
        # int speedX
        # int speedY
        # BufferedImage image
        # int width
        # int height
        # boolean isValid
        + AbstractFlyingObject(int, int, int, int)
        + void forward()
        + boolean crash(AbstractFlyingObject)
        + boolean notValid()
        + void vanish()
    }
}

package "aircraft" {
    interface CanBeBlownUp {
        + void beblownup()
    }

    interface EnemyAircraft {
        + List<BaseBullet> shoot()
    }

    abstract class AbstractAircraft extends AbstractFlyingObject {
        # int maxHp
        # int hp
        + AbstractAircraft(int, int, int, int, int)
        + void decreaseHp(int)
        + int getHp()
    }

    class HeroAircraft extends AbstractAircraft {
        - int shootNum
        - int power
        - int direction
        + List<BaseBullet> shoot()
        + void addHp(int)
    }

    class MobEnemy extends AbstractAircraft implements EnemyAircraft, CanBeBlownUp {
        + List<BaseBullet> shoot()
    }

    class EliteEnemy extends AbstractAircraft implements EnemyAircraft, CanBeBlownUp {
        - int shootNum
        - int power
        - int direction
        + List<BaseBullet> shoot()
    }

    class ElitePlusEnemy extends AbstractAircraft implements EnemyAircraft, CanBeBlownUp {
        + List<BaseBullet> shoot()
    }

    class BossEnemy extends AbstractAircraft implements EnemyAircraft {
        - int shootcount
        + List<BaseBullet> shoot()
    }
}

package "bullet" {
    abstract class BaseBullet extends AbstractFlyingObject {
        - int power
        + BaseBullet(int, int, int, int, int)
        + int getPower()
    }

    class HeroBullet extends BaseBullet {
    }

    class EnemyBullet extends BaseBullet {
    }
}

package "supply" {
    interface Supply {
        + int active()
    }

    abstract class BaseSupply extends AbstractFlyingObject implements Supply {
        # int kind
        + BaseSupply(int, int, int, int)
        + {abstract} int active()
    }

    class HpSupply extends BaseSupply {
        - int hp
        + int active()
    }

    class BulletSupply extends BaseSupply {
        + int active()
    }
    
    class BulletPlusSupply extends BaseSupply {
        + int active()
    }

    class BombSupply extends BaseSupply implements CanBeBlownUp {
        + int active()
        + void beblownup()
    }
}

' 继承与实现关系
AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- BossEnemy

EnemyAircraft <|.. MobEnemy
EnemyAircraft <|.. EliteEnemy
EnemyAircraft <|.. ElitePlusEnemy
EnemyAircraft <|.. BossEnemy

CanBeBlownUp <|.. MobEnemy
CanBeBlownUp <|.. EliteEnemy
CanBeBlownUp <|.. ElitePlusEnemy
CanBeBlownUp <|.. BombSupply

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

BaseSupply <|-- HpSupply
BaseSupply <|-- BulletSupply
BaseSupply <|-- BulletPlusSupply
BaseSupply <|-- BombSupply

' 依赖关系
AbstractAircraft ..> BaseBullet : creates
HeroAircraft ..> HeroBullet : creates
EliteEnemy ..> EnemyBullet : creates
ElitePlusEnemy ..> EnemyBullet : creates
BossEnemy ..> EnemyBullet : creates
BombSupply ..> CanBeBlownUp : notifies

@enduml
